created api endpoints for app

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ MarkupSafe==2.1.1
 marshmallow==3.19.0
 marshmallow-sqlalchemy==0.28.1
 packaging==22.0
+psycopg2-binary==2.9.5
 PyJWT==2.6.0
 pytz==2022.7
 six==1.16.0
