--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.9.0
 aniso8601==9.0.1
 click==8.1.3
 Flask==2.2.2
+Flask-Cors==3.0.10
 Flask-Login==0.6.2
 flask-marshmallow==0.14.0
 Flask-Migrate==4.0.0
